# todo-app-cli

./: Cargo.toml  README.md  sqlx-data.json
src/: main.rs
