[package]
name = "todo-app-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-std = { version = "1.8.0", features = [ "attributes" ] }
futures = "0.3"
paw = "1.0"
sqlx = { features = ["postgres", "offline", "runtime-async-std-native-tls"] }
structopt = { version = "0.3", features = ["paw"] }
dotenv = "0.15.0"
